# langchain_2026

./: .gitignore  1.openai_test.py  2.ollama_test.py  3.tavily_test.py  4.tavily_langchain_test.py  5.structured_output_test.py  main.py  openai_test.py  pyproject.toml  tavily_langchain_test.py  tavily_test.py
RAG-GIST/: ingestion.py  mediumblog1.txt  retrieve.py
ReAct-search-agent/: legacy_langchain.py  react-agent-test.py
document-helper/: about.md  ingestion.py
document-helper/backend/: core.py
langchain-basic/: ollama_test.py  openai_test.py
search-agent/: structured_output_test.py  tavily_langchain_test.py  tavily_test.py
